[JAT] - Cambios en tracker y la config. Añadidas clases en app e infra

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/pricetracker
     username: user
-    password: 
+    password: pass
   jpa:
     hibernate:
       ddl-auto: update
