--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate.format_sql: true
+    show-sql: true
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
